--- a/posts/2024/09/14.md
+++ b/posts/2024/09/14.md
@@ -10,7 +10,7 @@ type: "post"
 
 とても胡散臭いタイトルだ・・・
 
-![coconala](14_pic_1.png)
+![coconala](/14_pic_1.png)
 
 ## きっかけ
 
@@ -86,6 +86,9 @@ OpenAI のAPIキーはこっちで払い出して提案文に添えた。
 出来上がってから「思ってたのと違う」と言われるリスクがない分、お互い前のめりで開発できてしまう。そうすると、今度は逆にもらってるお金、納期に対して追加の機能要望がバコスカと増えていく状態になってしまい、こちらとしても時間単価が減っていってしまうため丁寧に説明して、追加見積もりに回してもらうことで納得いただけた。
 
 3日早く納品完了し、★5評価をいただけた。また、すぐに追加要望の見積もりの話にもなり、20,000円で発注してもらえることとなった。
+
+![ai_eisakubunのキャプチャ](/14_pic_2.png)
+瞬間英作文をするアプリで、AIが採点しフィードバックしてくれるアプリ。PCとスマホ両方で快適に使えるUIを心がけた。
 
 
 ## やってみて
