--- a/posts/2024/09/14.md
+++ b/posts/2024/09/14.md
@@ -4,7 +4,7 @@ date: "2024-09-14"
 title: "ポートフォリオも実績もゼロだったがココナラである戦略を試したら一撃で2件受注できた"
 categories: ["アプリ開発"]
 tags: ["ココナラ", "副業", "プログラミング"]
-excerpt: "今の仕事をやり続けてもソフトウェアエンジニアとして十分成長できるが、成長するジャンルが限られている。たとえば「フロントエンドのスキルを伸ばしたい」とか「ユーザーと対話して良いものを作れるようになりたい」と考えた時に、今の仕事でも十分伸ばせるんだけど、もっとスピード感もって上げたいと思ったら場数と挫折を乗り越えていく必要があると思った。"
+excerpt: "ココナラ初めて1日で戦略を決めて提案したら一撃で2件受注できた話。"
 type: "post"
 ---
 
