--- a/posts/1969/12/31-1.md
+++ b/posts/1969/12/31-1.md
@@ -2,7 +2,7 @@
 path: "/posts/1969/12/thread1signal-sigabrt/"
 date: "1969-12-31"
 title: "Thread1:signal SIGABRT"
-categories: ["iPhoneアプリ開発"]
+categories: ["エンジニアリング"]
 tags: []
 excerpt: "<div class=\"section\">はてなダイアリーも最近なんとか慣れてきました。  今回は、こちらのサイトの解説を参考に、iPhoneにてタイマーアプリを作ってました。内容は古いもので、..."
 ---
