--- a/posts/1969/12/31-3.md
+++ b/posts/1969/12/31-3.md
@@ -2,8 +2,8 @@
 path: "/posts/1969/12/about-apache/"
 date: "1969-12-31"
 title: "Apacheの話"
-categories: ["Linux"]
-tags: []
+categories: ["エンジニアリング"]
+tags: ["Linux", "Apache", "インフラ"]
 excerpt: "  <div class=\"section\">httpd.confのプロセス関連の件について、わかりづらい所があった。  ので、まとめる。  間違えている点があれば指摘して欲しいです。  クライ..."
 ---
 
