--- a/posts/1969/12/31-4.md
+++ b/posts/1969/12/31-4.md
@@ -2,7 +2,7 @@
 path: "/posts/1969/12/build-an-environment-with-gui-application-on-eclipse-4-2/"
 date: "1969-12-31"
 title: "Eclipse4.2でGUIアプリ開発の準備メモ"
-categories: ["Programming", "雑記"]
+categories: ["エンジニアリング", "雑記"]
 tags: []
 excerpt: " <div class=\"section\">部活内でチーム開発をすることになったので、環境構築をした。 予めHelloworldまで確認したので、メンバーの後輩へのドキュメント用にメモを残す。 ..."
 ---
