--- a/posts/1969/12/31.md
+++ b/posts/1969/12/31.md
@@ -2,8 +2,8 @@
 path: "/posts/1969/12/whats-class-of-object-oriented-programming/"
 date: "1969-12-31"
 title: "オブジェクト指向のクラスとかなんだよっていうアレ"
-categories: ["未分類"]
-tags: []
+categories: ["エンジニアリング"]
+tags: ["オブジェクト指向(OOP)", "プログラミング"]
 excerpt: "<div class=\"section\">オブジェクト指向を始めようとしている＆始めたばかりって人に  「これ何だよ！」って聞かれる事が多いので、単純に自分が説明する時の備忘録用にまとめてみよう..."
 ---
 
