--- a/posts/2012/07/14.md
+++ b/posts/2012/07/14.md
@@ -2,8 +2,8 @@
 path: "/posts/2012/07/about-super-class-and-sub-class/"
 date: "2012-07-14"
 title: "クラス(スーパークラス・サブクラス）"
-categories: ["Programming", "未分類"]
-tags: ["勉強"]
+categories: ["エンジニアリング"]
+tags: ["オブジェクト指向(OOP)"]
 excerpt: "  <div class=\"section\">基本だけどイメージがよくできないって人いるんじゃないだろうか？  よく、車が<span style=\"color:#00FF33;\" class..."
 ---
 
