--- a/posts/2012/08/13.md
+++ b/posts/2012/08/13.md
@@ -2,8 +2,8 @@
 path: "/posts/2012/08/i-tried-to-begin-wireshark/"
 date: "2012-08-13"
 title: "WireShark入門してみました"
-categories: ["Network", "Security"]
-tags: ["WireShark"]
+categories: ["エンジニアリング"]
+tags: ["WireShark", "ネットワーク", "セキュリティ"]
 excerpt: "<div class=\"section\">セキュリティキャンパス２０１２っていうのに応募していたんだけど  その応募期間の時にTwitterで  「もし受かったとしたら、それまでの間にできる事っ..."
 ---
 
