--- a/posts/2012/09/06.md
+++ b/posts/2012/09/06.md
@@ -1,15 +1,15 @@
 ---
 path: "/posts/2012/09/jquery/"
 date: "2012-09-06"
-title: "jQuery"
-categories: ["JavaScript", "Network", "Security", "雑記"]
+title: "jQuery について教科書をもらったので勉強してみた"
+categories: ["エンジニアリング"]
 tags: ["JavaScript", "jQuery"]
 excerpt: "<div class=\"section\">f:id:killinsun:20120906215456j:image  火曜日にWEB総合の授業で配られました。  jQueryの本です。  なんぞ..."
 ---
 
 <div class="section">[![f:id:killinsun:20120906215456j:image](https://cdn-ak.f.st-hatena.com/images/fotolife/k/killinsun/20120906/20120906215456.jpg "f:id:killinsun:20120906215456j:image")](http://f.hatena.ne.jp/killinsun/20120906215456)  
 火曜日にWEB総合の授業で配られました。  
-jQueryの本です。  
+jQueryの本です。
 
 なんぞやと思ったら、JavaScriptのライブラリみたいですね。  
 普通に書くよりかなり簡単なそうで。  
