--- a/posts/2012/09/18.md
+++ b/posts/2012/09/18.md
@@ -2,7 +2,7 @@
 path: "/posts/2012/09/i-tried-to-update-to-ios6-by-iphone4-part1/"
 date: "2012-09-18"
 title: "iPhone4でiOS6にしてみました。"
-categories: ["iOS", "雑記"]
+categories: ["雑記"]
 tags: ["iOS", "アップデート"]
 excerpt: "  <div class=\"section\">ざっと気づいた事。  実際に１日使用した感想をまとめたその２はこちら。  <span style=\"color:#FF0000;\" class=..."
 ---
