--- a/posts/2012/11/28.md
+++ b/posts/2012/11/28.md
@@ -1,9 +1,9 @@
 ---
 path: "/posts/2012/11/how-do-i-define-it-by-objective-c/"
 date: "2012-11-28"
-title: "Objective-Cだとどう宣言するんだよ"
-categories: ["Programming", "未分類"]
-tags: ["プログラミング"]
+title: "Objective-C での開発でちょっと詰まったところがあったのでメモ"
+categories: ["エンジニアリング"]
+tags: ["プログラミング", "Objective-C"]
 excerpt: "ここからはちょっと自分のためのメモ。  どうもこちらのサイトで解説している情報を読む限り、  Objective-Cでは  こんな感じだろうか？  上の..."
 ---
 
