--- a/posts/2013/01/04.md
+++ b/posts/2013/01/04.md
@@ -2,8 +2,8 @@
 path: "/posts/2013/01/migrate-google-account-and-copy/"
 date: "2013-01-04"
 title: "Googleアカウントを移行する&コピーする"
-categories: ["Chrome"]
-tags: ["Chrome", "ユーザー", "移行"]
+categories: ["エンジニアリング"]
+tags: ["Chrome"]
 excerpt: "Googleでメインとなるアカウントを作り直したんですが、 普段使ってるChromeのブックマークやプラグイン、デザインをそっくりそのまま 新しいGoo..."
 ---
 
