--- a/posts/2013/01/07.md
+++ b/posts/2013/01/07.md
@@ -2,7 +2,7 @@
 path: "/posts/2013/01/about-i-stacked-a-setting-internal-dns-server/"
 date: "2013-01-07"
 title: "内部DNSサーバーの設定に詰んだ話"
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["DNS", "IPv6", "Linux", "Network"]
 excerpt: "一昨日、技術部が参加しているAndroidのアプリ開発コンテストにて、 ネットワークを使った（いまや当然だが）アプリケーションを使うということで、 運営..."
 ---
