--- a/posts/2013/02/10.md
+++ b/posts/2013/02/10.md
@@ -2,7 +2,7 @@
 path: "/posts/2013/02/about-mobile-app-contest-2012/"
 date: "2013-02-10"
 title: "モバイルアプリコンテスト2012"
-categories: ["勉強会・大会", "アプリ開発"]
+categories: ["勉強会・大会", "エンジニアリング"]
 tags: ["Android", "Java", "勉強会"]
 excerpt: " <div class=\"section\">先日ちらっと内容漏らしたんですが、 学校で所属している技術部でAndroidアプリのチーム開発を行なってました。 発端は技術部宛に　「モバイルアプリコ..."
 ---
