--- a/posts/2013/03/08.md
+++ b/posts/2013/03/08.md
@@ -2,8 +2,8 @@
 path: "/posts/2013/03/note-tweak-laptop-display-on-ubuntu/"
 date: "2013-03-08"
 title: "Ubuntuだとパソコンのディスプレイが見辛かったので調整メモ"
-categories: ["Ubuntu"]
-tags: ["Ubuntu"]
+categories: ["トラブルシューティング"]
+tags: ["Ubuntu", "Linux"]
 excerpt: "Linuxを本格的に使い始めようと思ったは良いものの、 Windows7やMacを使っている時と画面の文字が明るすぎて見えないというか 画面の明るさを..."
 ---
 
