--- a/posts/2013/03/17.md
+++ b/posts/2013/03/17.md
@@ -2,8 +2,8 @@
 path: "/posts/2013/03/brightness-tweak-on-ubuntu-12-10-on-laptop/"
 date: "2013-03-17"
 title: "Ubuntu12.10　ノートPCで画面の明るさ調整"
-categories: ["Ubuntu"]
-tags: ["Ubuntu"]
+categories: ["トラブルシューティング"]
+tags: ["Ubuntu", "Linux"]
 excerpt: "Ubuntu12.10を導入したものの、ノートPCにてで明るさが調整できない事にハマってたので、設定メモ。"
 ---
 
