--- a/posts/2013/06/05.md
+++ b/posts/2013/06/05.md
@@ -2,8 +2,8 @@
 path: "/posts/2013/06/build-a-twitter-bot-with-python-twitter/"
 date: "2013-06-05"
 title: "python-twitterを使ってTwitterBot開発"
-categories: ["入門系"]
-tags: ["API", "Python", "Twitter"]
+categories: ["入門系記事"]
+tags: ["Python", "Twitter"]
 excerpt: " <div class=\"section\">環境の構築さえできてしまえば問題無いんだけど、OAuthだったり、 tweetpyだったり、python-twitterだったり、その他いろいろだった..."
 ---
 
