--- a/posts/2013/10/29.md
+++ b/posts/2013/10/29.md
@@ -2,8 +2,8 @@
 path: "/posts/2013/10/quick-review-using-macos-marvericks-a-week/"
 date: "2013-10-29"
 title: "Mac OSX 10.9- Marvericks使って一週間過ごした感想"
-categories: ["Mac"]
-tags: ["Mac", "Marverics"]
+categories: ["雑記"]
+tags: ["macOS", "使ってみた・やってみた"]
 excerpt: "大まかな所は変わっておりません。 "
 ---
 
