--- a/posts/2018/04/23.md
+++ b/posts/2018/04/23.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/04/i-tried-aws-solution-architect-associate-within-2-weeks/"
 date: "2018-04-23"
 title: "約２週間ほどでAWS SAAを受験した話"
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["AWS", "SAA", "ソリューションアーキテクトアソシエイト", "資格"]
 excerpt: "仕事の都合上、所属チームで戦略的にAWSのスキルを高めようという話になり、AWSソリューションアーキテクトアソシエイト（AWS SAA）を受験してきました。業務でAWSを利用できる環境はあるのですが..."
 ---
