--- a/posts/2018/05/04.md
+++ b/posts/2018/05/04.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/05/i-stacked-by-digest-auth-with-passportjs-with-express4/"
 date: "2018-05-04"
 title: "Passport.jsのDigest認証で詰んだ話（express 4)"
-categories: ["Webサービス開発"]
+categories: ["エンジニアリング"]
 tags: ["express", "Node.js"]
 excerpt: "express4でdigest認証を使う為にpassport.jsを使って実装しようとしたらバグに直面した話です。リクエストURL (req.url)とpassportの資格情報で提供されたURI（..."
 ---
