--- a/posts/2018/05/07.md
+++ b/posts/2018/05/07.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/05/installing-nodejs-and-express4-with-centos7/"
 date: "2018-05-07"
 title: "【WEB開発メモ#1】 CentOS7系にnode.jsとExpress 4をインストールする"
-categories: ["Webサービス開発"]
+categories: ["エンジニアリング"]
 tags: ["express", "Linux", "Node.js", "初心者向け"]
 excerpt: "node.jsを使ったWEB開発を行う為に、必要な手順を個人的なメモレベルで書き記していこうと思います。WEB開発が本業ではないので、その筋の方々からすると遠回りだったり、ベストプラクティスではない..."
 ---
