--- a/posts/2018/05/14.md
+++ b/posts/2018/05/14.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/05/esxi6-5-pxe-boot-and-kickstart-install-on-uefi-boot/"
 date: "2018-05-14"
 title: "ESXi6.5  PXE boot and Kickstart install on UEFI boot."
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["ESXi", "PXEBoot", "Linux", "VMware"]
 excerpt: "ESXi6.5を大量構築する必要があったので、<del>手を抜く為・・・</del>いや工数を削減する為に用意した環境のメモです。（実際の現場では以下の様な手順とチェックシートを書き記して投げつけた..."
 ---
