--- a/posts/2018/05/17.md
+++ b/posts/2018/05/17.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/05/manage-password-safely-by-passportjs-with-digest-strategypassport-js-digest-strategy/"
 date: "2018-05-17"
 title: "Passport.js digest-strategy で パスワードを安全に管理する"
-categories: ["Webサービス開発"]
+categories: ["エンジニアリング"]
 tags: ["Digest認証", "Node.js", "Passport.js", "express"]
 excerpt: "泣きながらDigest認証を行うnode.jsサーバを構築していて詰まったところがあったのでメモ。passport.jsのdigest認証は、request時に受け付けたユーザIDを引数にして関数を..."
 ---
