--- a/posts/2018/07/23.md
+++ b/posts/2018/07/23.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/07/mariadb-down-due-to-nginx-and-php-fpm/"
 date: "2018-07-23"
 title: "MariaDB down due to nginx and php-fpm."
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["Azure", "MariaDB", "CentOS", "Linux", "MySQL"]
 excerpt: "業務多忙でしばらくブログ更新どころかアクセスすらしていない状況で、いつの間にか当ブログのバックエンドで動いているMariaDBが死んでいた。/var/log/mariadb/mariadb.log　..."
 ---
