--- a/posts/2018/07/26-1.md
+++ b/posts/2018/07/26-1.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/07/reconfigure-media-serveror-client-certification-setting/"
 date: "2018-07-26"
 title: "Reconfigure media server(or client) certification setting."
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["Certification", "Linux", "NetBackup"]
 excerpt: "I faced problem that is \"The vnetd proxy encountered an error\".My situations are these.Existing m..."
 ---
