--- a/posts/2018/07/26.md
+++ b/posts/2018/07/26.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/07/master-server-cert-revoked-on-netbackup-8-1/"
 date: "2018-07-26"
 title: "Master Server cert revoked on NetBackup 8.1"
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["Certification", "Linux", "NetBackup"]
 excerpt: "I had a mistake with revoked for master server's cert on NetBackup 8.1 .In below, my solution.投稿<pr..."
 ---
