--- a/posts/2018/09/05.md
+++ b/posts/2018/09/05.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/09/how-to-use-docker-php-ext-install-command-on-the-docker_container-of-ansible-modules/"
 date: "2018-09-05"
 title: "How to use docker-php-ext-install command on the docker_container of ansible modules."
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["Ansible", "Docker", "PHP"]
 excerpt: "I faced any problems that is couldn't use command option of a docker_container module.I need custom..."
 ---
