--- a/posts/2018/10/08.md
+++ b/posts/2018/10/08.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/10/using-mariadb-with-express-and-pug/"
 date: "2018-10-08"
 title: "express + pugを使ってMariaDB(MySQL)と連携する"
-categories: ["Webサービス開発"]
+categories: ["エンジニアリング"]
 tags: ["express", "MySQL", "JavaScript", "Node.js", "pug", "データベース"]
 excerpt: "手始めにこんな感じのシンプルなテーブルを用意した。<table><thead><tr><th>id</th><th>name</th><th>other_name</th></tr></thead>..."
 ---
