--- a/posts/2018/11/11.md
+++ b/posts/2018/11/11.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/11/unique-commands-of-macos/"
 date: "2018-11-11"
 title: "macOS 固有CLI コマンド"
-categories: ["Mac"]
+categories: ["エンジニアリング"]
 tags: ["macOS", "コマンド", "ターミナル"]
 excerpt: "意外とLinux系のコマンドは触ることが多いが、普段よく使うmacOS固有のコマンドって「打ってみて」と言われてすぐに手が動かせないので備忘録要は　→このMacについて→システムレポート　の内容を..."
 ---
