--- a/posts/2018/11/25.md
+++ b/posts/2018/11/25.md
@@ -3,7 +3,7 @@ path: "/posts/2018/11/getting-start-golang/"
 date: "2018-11-25"
 title: "Go言語の環境整備と基本文法を学んだ"
 categories: ["入門系記事"]
-tags: ["golang", "go言語", "メモ", "入門"]
+tags: ["golang", "go言語", "メモ"]
 excerpt: "VSCode上で適当なワークスペースを用意した。今回は「/Users/{わたし}/Documents/Projects/golang_introductionとしてディレクトリを用意した。macOS..."
 ---
 
