--- a/posts/2018/11/28.md
+++ b/posts/2018/11/28.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/11/i-read-a-book-001/"
 date: "2018-11-28"
 title: "[樺沢紫苑 著] 学びを結果に変える アウトプット大全　を読了した"
-categories: ["読書"]
+categories: ["読書ログ"]
 tags: ["アウトプット", "樺沢紫苑"]
 excerpt: "前々から気になってて、駅の本屋でぱっと見かけて1500円程度だったので買ってみた。まずはじめに断っておくと、この本を読んだのをきっかけに読了した事を簡単にまとめてみようと思った。それくらい、初心者に..."
 ---
