--- a/posts/2018/12/03.md
+++ b/posts/2018/12/03.md
@@ -2,7 +2,7 @@
 path: "/posts/2018/12/i-stacked-by-installing-android-sdk-by-cli/"
 date: "2018-12-03"
 title: "android-sdkをCLIでインストールする際にハマった"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["android-sdk", "Java11", "Java8", "sdkmanager"]
 excerpt: "新しければ良いってもんじゃないと改めて思い知らされる<pre class=\"lang:sh decode:true\">$ ./sdkmanagerException in thread \"ma..."
 ---
