--- a/posts/2019/01/05.md
+++ b/posts/2019/01/05.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/01/build-a-list-having-multipule-viewholders-by-once-recyclerview-with-kotlin/"
 date: "2019-01-05"
 title: "RecyclerView Adapter 一つに対して複数のViewHolderを持つリストを作成する"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Android", "Kotlin", "multiple ViewHolder", "RecyclerView", "RecyclerView.adapter", "ViewHolder"]
 excerpt: "Kotlin でAndroidアプリ開発をはじめました。まず、LegacyとなったListViewの代わりにRecyclerViewというのが新しく用意されているとの事で触ってみました。ちゃんとした..."
 ---
