--- a/posts/2019/01/13.md
+++ b/posts/2019/01/13.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/01/using-imageview-and-imagebutton-with-kotlin-android-part2/"
 date: "2019-01-13"
 title: "【Android App with Kotlin #2】画像を取り扱う(ImageView/ImageButton)"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Android", "Android App with Kotlin", "ImageButton", "ImageView", "Kotlin"]
 excerpt: "ImageViewとImageButtonの使い方をまとめました。Activity内に`ImageView`と`ImageButton`を配置し、`ImageButton`をタップすると`Image..."
 ---
