--- a/posts/2019/01/15.md
+++ b/posts/2019/01/15.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/01/using-listview-with-kotlin-android-part1/"
 date: "2019-01-15"
 title: "【Android App with Kotlin #3】ListViewを使う"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Android", "Android App with Kotlin", "Kotlin", "ListView"]
 excerpt: "まずはListViewに適当なデータを表示させるシンプルなものを用意しました。ListviewActivity.kt内で宣言したString型のコレクションを表示させるListViewです。このコー..."
 ---
