--- a/posts/2019/01/20.md
+++ b/posts/2019/01/20.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/01/using-listview-with-kotlin-android-part2/"
 date: "2019-01-20"
 title: "【Android App with Kotlin #4】ListViewを使う(2)"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Android", "Android App with Kotlin", "Kotlin"]
 excerpt: "ListViewの要素をタップした時の動作を追加しました。前回の記事で作成したListViewに対し、タップイベントを追加しました。このコードは以下の環境で書いています。前回の記事の成果物を使います..."
 ---
