--- a/posts/2019/01/22.md
+++ b/posts/2019/01/22.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/01/i-joined-kotlinlove-7-and-gave-a-presentation/"
 date: "2019-01-22"
 title: "「集まれ！Kotlin好き！Kotlin愛好会 vol7」に参加し、登壇してきました"
-categories: ["勉強会・大会", "アプリ開発"]
+categories: ["勉強会・大会", "エンジニアリング"]
 tags: ["#love_kotlin", "Kotlin", "勉強会"]
 excerpt: "KotlinでAndroidアプリ開発を初めて大体１ヶ月ぐらい経ち、少しKotlinのことも深く知りたいと思ったので勉強会に飛び込んできました。今年の目標通り、登壇回数を増やす為に談義枠で参加し、登..."
 ---
