--- a/posts/2019/02/06.md
+++ b/posts/2019/02/06.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/02/using-recyclerview-with-kotlin-android/"
 date: "2019-02-06"
 title: "【Android App with Kotlin #5】RecyclerViewを使う"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Android", "Android App with Kotlin", "Kotlin"]
 excerpt: "RecyclerViewを一番シンプルかつ実践的な機能で使いました。ImageViewとTextViewがリスト表示され、タップするとTOASTが通知されるシンプルなものです。このコードは以下の環境..."
 ---
