--- a/posts/2019/09/08.md
+++ b/posts/2019/09/08.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/09/i-attended-isucon9/"
 date: "2019-09-08"
 title: "【ISUCON9予選】初参加しました"
-categories: ["コンテスト"]
+categories: ["勉強会・大会"]
 tags: []
 excerpt: "前々から気になってたけどチーム組んで参加するのがハードル高かったんですが、友人と参加する事ができました。結果は予選落ちです。スコアは5,010ｲｽｺｲﾝでした。一緒に参加した友人に比べて特別に高いス..."
 ---
