--- a/posts/2019/09/29.md
+++ b/posts/2019/09/29.md
@@ -2,7 +2,7 @@
 path: "/posts/2019/09/ios-framework-build-error/"
 date: "2019-09-29"
 title: "iOSの自作フレームワーク読み込み後のビルドでエラー"
-categories: ["iPhoneアプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Framework", "iOS", "SDK", "XCode"]
 excerpt: "自作というよりは自社製っていう感じなんですが、お客さんのアプリにインストールしている際に発生したエラーです。以下のエラーが出ました。"
 ---
