--- a/posts/2020/01/02.md
+++ b/posts/2020/01/02.md
@@ -2,7 +2,7 @@
 path: "/posts/2020/01/02/use-bootstrap4-with-gatsbyjs-on-npm-install"
 date: "2020-01-02"
 title: "GatsbyJSでbootstrap4を使う(npm)"
-categories: ["ブログ更新"]
+categories: ["個人ブログ開発"]
 tags: ["JavaScript", "GatsbyJS", "BootStrap"]
 excerpt: "npm i --save bootstrap jquery reactstrapgatsby-browser.jsimport \"bootstrap/dist/css/bootstrap.min...."
 type: "post"
