--- a/posts/2020/01/05.md
+++ b/posts/2020/01/05.md
@@ -2,7 +2,7 @@
 path: "/posts/2020/01/05/i-migrated-my-blog-to-netlify-with-gatsbyjs"
 date: "2020-01-05"
 title: "ブログをGatsbyJS製の静的サイトに移行した"
-categories: ["ブログ更新"]
+categories: ["個人ブログ開発"]
 tags: ["JavaScript", "GatsbyJS", "Netlify"]
 excerpt: "WordPressからGatsbyJSを使った静的ブログに移行させました。"
 type: "post"
