--- a/posts/2020/06/11.md
+++ b/posts/2020/06/11.md
@@ -2,7 +2,7 @@
 path: "/posts/2020/06/11/clas_cast_exception_when_instancing_viewModel_with_fragment-ktx"
 date: "2020-06-11"
 title: "by viewModels() | ActivityViewModelsでClassCastException "
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["issue", "Android", "Kotlin", "Development"]
 excerpt: "fragment-ktxを使ってViewModelを生成する際にClassCastExceptionが出て詰んだ"
 type: "post"
