--- a/posts/2021/08/22.md
+++ b/posts/2021/08/22.md
@@ -2,7 +2,7 @@
 path: "/posts/2021/08/22/gatsby-awesome-pagination"
 date: "2021-08-22"
 title: "GatsbyJSにページネーションを追加した"
-categories: ["ブログ更新"]
+categories: ["個人ブログ開発"]
 tags: ["GatsbyJS", "plugin"]
 excerpt: "設定の意味をまるで覚えていないのはやばかった"
 type: "post"
