--- a/posts/2021/08/24.md
+++ b/posts/2021/08/24.md
@@ -2,7 +2,7 @@
 path: "/posts/2021/08/24/gatsby-categories-and-tags"
 date: "2021-08-24"
 title: "GatsbyJSにカテゴリ一覧、タグ一覧を追加した"
-categories: ["ブログ更新"]
+categories: ["個人ブログ開発"]
 tags: ["GatsbyJS"]
 excerpt: "重い腰を上げてタグ一覧、カテゴリー一覧を実装した"
 type: "post"
