--- a/posts/2021/08/28.md
+++ b/posts/2021/08/28.md
@@ -2,7 +2,7 @@
 path: "/posts/2021/08/28/using-react-share-for-my-blog"
 date: "2021-08-28"
 title: "React の react-share を使ってSNSシェアアイコンを設置した "
-categories: ["ブログ更新"]
+categories: ["個人ブログ開発"]
 tags: ["GatsbyJS", "React"]
 excerpt: "多機能・便利なコンポーネントで楽をしたかった人生だった"
 type: "post"
