--- a/posts/2022/02/12.md
+++ b/posts/2022/02/12.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/2/12/next.js-develop-environment"
 date: "2022-02-12"
 title: "Next.js 開発環境構築"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["React", "Next.js"]
 excerpt: "TypeScript + create-next-app"
 type: "post"
