--- a/posts/2022/02/14.md
+++ b/posts/2022/02/14.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/2/14/next.js-getStaticProps"
 date: "2022-02-14"
 title: "getStaticProps の 'props' にハマった時のメモ"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング", "トラブルシューティング"]
 tags: ["React", "Next.js"]
 excerpt: "TypeScript + create-next-app"
 type: "post"
