--- a/posts/2022/02/19.md
+++ b/posts/2022/02/19.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/2/19/nodegit"
 date: "2022-02-19"
 title: "nodegit を使って git リポジトリを操作してみた"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["React", "Next.js", "Node.js", "nodegit"]
 excerpt: "gitkraken の裏で動いているアプリみたい"
 type: "unpublished_post"
