--- a/posts/2022/02/26.md
+++ b/posts/2022/02/26.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/2/26/golang_get_vs_install"
 date: "2022-02-26"
 title: "Go 1.17 における開発環境構築メモ"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Go"]
 excerpt: "書籍を読み進めていて混乱したのでメモ"
 type: "post"
