--- a/posts/2022/03/05.md
+++ b/posts/2022/03/05.md
@@ -2,8 +2,8 @@
 path: "/posts/2022/3/05/What_is_gradual_typing"
 date: "2022-03-05"
 title: "漸進的型付けとは"
-categories: ["アーキテクチャ"]
-tags: ["Architecture"]
+categories: ["エンジニアリング"]
+tags: ["アーキテクチャ・設計", "TypeScript", "JavaScript", "Python", "Ruby" ]
 excerpt: "静的型付け、動的型付けと何が違うの"
 type: "post"
 ---
