--- a/posts/2022/03/08.md
+++ b/posts/2022/03/08.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/3/08/golang_learn_1"
 date: "2022-03-08"
 title: "Go言語学習(ポインタ、構造体、メソッド）"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Go"]
 excerpt: "アウトプットの整理"
 type: "post"
