--- a/posts/2022/03/12.md
+++ b/posts/2022/03/12.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/3/12/golang_learn_2"
 date: "2022-03-12"
 title: "Go言語学習(net/http における HTTP サーバー構築)"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Go", "net/http"]
 excerpt: "アウトプットの整理"
 type: "post"
