--- a/posts/2022/04/06.md
+++ b/posts/2022/04/06.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/4/06/rails_new_error"
 date: "2022-04-06"
 title: "rails new で CipherError" 
-categories: ["アプリ開発"]
+categories: ["エンジニアリング", "トラブルシューティング"]
 tags: ["Ruby", "Rails"]
 excerpt: "Rails tutorial をローカルで進めようとした時に遭遇したエラー"
 type: "post"
