--- a/posts/2022/06/02.md
+++ b/posts/2022/06/02.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/6/02/typescript_vuejs_2"
 date: "2022-06-02"
 title: "TypeScript 環境で Vue.js 2.x を使う時にハマったところを書いていく" 
-categories: ["アプリ開発"]
+categories: ["エンジニアリング", "トラブルシューティング"]
 tags: ["TypeScript", "Vue.js"]
 excerpt: ""
 type: "post"
