--- a/posts/2022/10/17.md
+++ b/posts/2022/10/17.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/10/17/vuejs_import_error_on_building"
 date: "2022-10-17"
 title: "Cannot use namespace 'Vue' as a type. と出てフロントのビルドが失敗した"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング", "トラブルシューティング"]
 tags: ["Vue.js", "Node.js", "JavaScript"]
 excerpt: "開発しているプロダクトのブランチで最新のコミットを取ってきたらなぜかローカルで開発環境が立ち上がらなくなる事態に直面した。
 標準出力を眺めてみると、いくつかのサービスのうちの一つでエラーを吐いて停止しており、それがフロントエンド関連のものだとわかった。"
