--- a/posts/2022/11/12.md
+++ b/posts/2022/11/12.md
@@ -2,7 +2,7 @@
 path: "/posts/2022/11/12/first_step_terraform"
 date: "2022-11-12"
 title: "Terraform の Quick start tutorial をじっくりやってみた"
-categories: ["インフラ"]
+categories: ["エンジニアリング"]
 tags: ["Terraform", "AWS", "IaC"]
 excerpt: ""
 type: "post"
