--- a/posts/2023/01/02.md
+++ b/posts/2023/01/02.md
@@ -2,7 +2,7 @@
 path: "/posts/2023/01/02/portaudio_go"
 date: "2023-01-02"
 title: "Portaudio を Go 言語で触ってみた"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Go", "Audio"]
 excerpt: ""
 type: "post"
