--- a/posts/2023/05/13.md
+++ b/posts/2023/05/13.md
@@ -5,7 +5,7 @@ topics: ["Pinecone", "vectordb", "langchain"]
 published: false
 path: "/posts/2023/05/13/pinecone_langchain"
 date: "2023-01-02"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Pinecone", "LangChain", "vectordb"]
 excerpt: ""
 type: "post"
