--- a/posts/2024/09/14.md
+++ b/posts/2024/09/14.md
@@ -2,7 +2,7 @@
 path: "/posts/2024/09/14"
 date: "2024-09-14"
 title: "ポートフォリオも実績もゼロだったがココナラである戦略を試したら一撃で2件受注できた"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["ココナラ", "副業", "プログラミング"]
 excerpt: "ココナラ初めて1日で戦略を決めて提案したら一撃で2件受注できた話。"
 type: "post"
