--- a/posts/2012/09/19.md
+++ b/posts/2012/09/19.md
@@ -2,7 +2,7 @@
 path: "/posts/2012/09/i-tried-to-update-to-ios6-by-iphone4-part2/"
 date: "2012-09-19"
 title: "iPhone4でiOS6にしてみました。（その２）"
-categories: ["iOS", "雑記"]
+categories: ["雑記"]
 tags: ["iOS", "アップデート"]
 excerpt: " <div class=\"section\">大雑把な新機能については皆さんご存知の通りなので 今回は使った感想編。 新機能編についてはこちら iPhone4でiOS6にしてみました。（その１）電..."
 ---
