--- a/posts/2012/10/10.md
+++ b/posts/2012/10/10.md
@@ -2,7 +2,7 @@
 path: "/posts/2012/10/i-could-not-access-by-hostname-on-only-chrome/"
 date: "2012-10-10"
 title: "Chromeだけホスト名でアクセスできなかった　の話"
-categories: ["Chrome", "未分類"]
+categories: ["トラブルシューティング"]
 tags: ["Chrome", "DNS", "設定"]
 excerpt: "自宅内でDNSサーバーを動かし、いくつかあるWEBサーバー（zabbixだったりtomcatだったりOracleのapexだったり）にアクセスしに行..."
 ---
