--- a/posts/2012/12/31.md
+++ b/posts/2012/12/31.md
@@ -2,7 +2,7 @@
 path: "/posts/2012/12/lets-start-ios-programming-with-xcode-44/"
 date: "2012-12-31"
 title: "XCode4.4を使ってiOSプログラミングをはじめよう"
-categories: ["iPhoneアプリ開発", "Programming"]
+categories: ["エンジニアリング", "エンジニアリング"]
 tags: ["XCode", "プログラミング"]
 excerpt: "<div class=\"section\">  Macを導入してまずやりたいなと思ってたことが  iPhoneのアプリ開発である。  プログラミングというのは元々、  高校時代にCOBOLという今..."
 ---
