--- a/posts/2020/06/18.md
+++ b/posts/2020/06/18.md
@@ -2,7 +2,7 @@
 path: "/posts/2020/06/18/change_floating_action_button_bg_color"
 date: "2020-06-18"
 title: "FABの背景色と余計な線を消す"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["issue", "Android", "Kotlin", "Development"]
 excerpt: "Floating Action Buttonの背景色変更に関するメモ"
 type: "post"
