--- a/posts/2023/01/07.md
+++ b/posts/2023/01/07.md
@@ -2,7 +2,7 @@
 path: "/posts/2023/01/07/go-wav"
 date: "2023-01-07"
 title: "Portaudio で録音した音声データを WAV 形式で保存する"
-categories: ["アプリ開発"]
+categories: ["エンジニアリング"]
 tags: ["Go", "Audio"]
 excerpt: ""
 type: "post"
