--- a/posts/2024/09/17.md
+++ b/posts/2024/09/17.md
@@ -22,7 +22,7 @@ type: "post"
 
 ## 私について軽く自己紹介
 
-私は 2022年にソフトウェアエンジニアに社内転職しました。2023年秋の時点ではちょうど経験1年半といった感じです。
+私は 2022年にソフトウェアエンジニアに社内転職しました。2023年秋の時点ではちょうど経験1年半といった感じです。(ややこしいですが、記事を書いている2024年の今は 2年半ほど経験しています)
 社内転職する前は、カスタマーサクセスとして今の会社に入社し、リーダー、マネジメントを経験してから本当にやりたい事ってやっぱエンジニアリングだよねと思い、社内転職しました。
 
 社内転職に関する話は、こちらの Zenn にまとめてありますので、よかったらご覧ください。
