--- a/posts/2024/09/17.md
+++ b/posts/2024/09/17.md
@@ -13,7 +13,7 @@ type: "post"
 昨年 2023年の秋ごろ、社長と 1on1 しているときに、私に対して期待されていること、チームをうまく動かしていくためにやってほしいことを話されました。
 
 
-「エンジニアリングマネージャーとして動いてもらいたいんだよね」
+>「エンジニアリングマネージャーとして動いてもらいたいんだよね」
 
 この言葉を聞いて、「ついに来（てしまっ）たか」と思いました。その時の私の状況は、後ほど自己紹介でも軽く触れますが、まだ自分自身が満足に動けていない状況でしたし、進みたい道ではなかったからです。
 
@@ -53,13 +53,10 @@ type: "post"
 
 [「EM.FM」](https://podcasters.spotify.com/pod/show/em-fm) というラジオで語られていたエピソードで印象的な事があります。
 
-「エンジニアリングってソフトウェアエンジニアリングのことだけじゃないよ」
-
-「物を作るってエンジニアだけがやることじゃないよね。いろんな組織がそれぞれやっていることだよね」
-
-「そんな組織間のボトルネックを解消するのって、『エンジニアリング』だよね」
-
-「そんな『エンジニアリング』をマネジメントしていくのが『エンジニアリングマネージャー』だよね」
+>「エンジニアリングってソフトウェアエンジニアリングのことだけじゃないよ」<br/>
+>「物を作るってエンジニアだけがやることじゃないよね。いろんな組織がそれぞれやっていることだよね」<br/>
+>「そんな組織間のボトルネックを解消するのって、『エンジニアリング』だよね」<br/>
+>「そんな『エンジニアリング』をマネジメントしていくのが『エンジニアリングマネージャー』だよね」<br/>
 
 ボトルネックの解消ってやったことがある人はわかると思うんですが、どこが原因か突き止めて対策してはアテが外れたり、うまくいったり、逆に別のボトルネックを生んだりと、試行錯誤が必要です。
 そういった試行錯誤が好きな人にはエンジニアリングマネージャーは向いていると思います。
