--- a/posts/2024/09/17.md
+++ b/posts/2024/09/17.md
@@ -15,7 +15,7 @@ type: "post"
 
 >「エンジニアリングマネージャーとして動いてもらいたいんだよね」
 
-この言葉を聞いて、「ついに来（てしまっ）たか」と思いました。その時の私の状況は、後ほど自己紹介でも軽く触れますが、まだ自分自身が満足に動けていない状況でしたし、進みたい道ではなかったからです。
+この言葉を聞いて、**「ついに来（てしまっ）たか」** と思いました。その時の私の状況は、後ほど自己紹介でも軽く触れますが、まだ自分自身が満足に動けていない状況でしたし、進みたい道ではなかったからです。
 
 でも、いまチームを良い方向に導くにはそれしかないと内心思っていたのも事実です。私はエンジニアリングマネージャーという肩書きは欲しいわけではないけれど、自己とチームの成長のために肩書きを気にせずやってきたことを書いていきます。
 この記事がある日突然「エンジニアリングマネージャー」になるように言われた方、もしくはなろうと考えている方の参考になれば幸いです。
@@ -53,10 +53,10 @@ type: "post"
 
 [「EM.FM」](https://podcasters.spotify.com/pod/show/em-fm) というラジオで語られていたエピソードで印象的な事があります。
 
->「エンジニアリングってソフトウェアエンジニアリングのことだけじゃないよ」<br/>
+>「エンジニアリングって **ソフトウェアエンジニアリングのことだけじゃない** よ」<br/>
 >「物を作るってエンジニアだけがやることじゃないよね。いろんな組織がそれぞれやっていることだよね」<br/>
->「そんな組織間のボトルネックを解消するのって、『エンジニアリング』だよね」<br/>
->「そんな『エンジニアリング』をマネジメントしていくのが『エンジニアリングマネージャー』だよね」<br/>
+>「そんな **組織間のボトルネックを解消する** のって、 **『エンジニアリング』** だよね」<br/>
+>「そんな **『エンジニアリング』をマネジメントしていく** のが **『エンジニアリングマネージャー』** だよね」<br/>
 
 ボトルネックの解消ってやったことがある人はわかると思うんですが、どこが原因か突き止めて対策してはアテが外れたり、うまくいったり、逆に別のボトルネックを生んだりと、試行錯誤が必要です。
 そういった試行錯誤が好きな人にはエンジニアリングマネージャーは向いていると思います。
@@ -73,7 +73,7 @@ type: "post"
 
 逆に、エンジニアリングマネージャーに向いていない人について考えてみます。向いている人の逆なのはもちろんですが、それ以外に何かあるかもしれません。
 
-それはズバリ、自分でなんでもやりたい人です。エンジニアリングマネージャーは、メンバーの成長を促すために、自分がやりたいことを我慢することが多いです。自分がやりたいことを我慢することができない人は、エンジニアリングマネージャーに向いていないかもしれません。
+それはズバリ、<span class="marker-important">自分でなんでもやりたい人です</span>。エンジニアリングマネージャーは、メンバーの成長を促すために、自分がやりたいことを我慢することが多いです。自分がやりたいことを我慢することができない人は、エンジニアリングマネージャーに向いていないかもしれません。
 
 私が「ついに来たか」と思ったのは、自分がやりたいことを我慢することができるかどうかが一番の不安だったからです。我慢どころか、むしろ自分自身が成長していかないと話にならないでしょ！という時期だったからというのもあります。
 
@@ -95,7 +95,7 @@ type: "post"
 
 特に、最後の雑談をする、は個人的には一番大事でした。エンジニアリングマネージャーという肩書きを持って仕事をしていたわけではないのですが、やはり1on1を「する側」「される側」で意識してしまうだろうというのがあり、そこから上下関係ができてしまうからです。
 
-上下関係ではなく、あくまで役割として1on1をするために、雑談で距離を縮めることが大事だと感じました。
+上下関係ではなく、あくまで役割として1on1をするために、<span class="marker-important">雑談で距離を縮めることが大事</span>だと感じました。
 
 ### メンバーが活躍できる場を作る
 
@@ -104,7 +104,7 @@ type: "post"
 ### 「こうしたら」「こうなる」の試行錯誤を繰り返す
 
 実は結構がむしゃらにやっていた時期が多いので、どんな試作を打ったか思い出せないこともありますが、一つ言えるのは試行錯誤しまくったということです。
-直近の話でいうと、私はリモートワーク賛成派でしたが　より良いコミュニケーションの場を作るために、一時的か恒久的かはわかりませんが、エンジニアリングチームはオフィス出社を義務付けることにした、というエピソードもあります。
+直近の話でいうと、<span class="marker-important">私はリモートワーク賛成派でしたが　より良いコミュニケーションの場を作るために</span>、一時的か恒久的かはわかりませんが、<span class="marker-important">エンジニアリングチームはオフィス出社を義務付けることにした</span>、というエピソードもあります。
 
 これだけで一つ記事がかけてしまう程ですが、リモートワーク廃止にしたのは私自身のスキル不足から来ているという反省もあります。ですが、試行錯誤のひとつと捉えています。
 
