--- a/posts/2022/07/25.md
+++ b/posts/2022/07/25.md
@@ -3,7 +3,7 @@ path: "/posts/2022/07/25/isucon12_qualify"
 date: "2022-07-25"
 title: "ISUCON12 予選に出場した"
 categories: ["勉強会・大会"]
-tags: ["ISUCON", "Go"]
+tags: ["ISUCON", "Golang"]
 excerpt: ""
 type: "post"
 ---
