--- a/posts/2023/01/02.md
+++ b/posts/2023/01/02.md
@@ -3,7 +3,7 @@ path: "/posts/2023/01/02/portaudio_go"
 date: "2023-01-02"
 title: "Portaudio を Go 言語で触ってみた"
 categories: ["エンジニアリング"]
-tags: ["Go", "Audio"]
+tags: ["Golang", "Audio"]
 excerpt: ""
 type: "post"
 ---
