--- a/posts/2022/02/26.md
+++ b/posts/2022/02/26.md
@@ -3,7 +3,7 @@ path: "/posts/2022/2/26/golang_get_vs_install"
 date: "2022-02-26"
 title: "Go 1.17 における開発環境構築メモ"
 categories: ["エンジニアリング"]
-tags: ["Go"]
+tags: ["Golang"]
 excerpt: "書籍を読み進めていて混乱したのでメモ"
 type: "post"
 ---
