--- a/posts/2022/03/12.md
+++ b/posts/2022/03/12.md
@@ -3,7 +3,7 @@ path: "/posts/2022/3/12/golang_learn_2"
 date: "2022-03-12"
 title: "Go言語学習(net/http における HTTP サーバー構築)"
 categories: ["エンジニアリング"]
-tags: ["Go", "net/http"]
+tags: ["Golang", "net/http"]
 excerpt: "アウトプットの整理"
 type: "post"
 ---
